<resources>
    <string name="current_user"></string>
    <string name="app_name">nstar</string>
    <string name="login_1">"NSTAR"</string>
    <string name="login_2">"Mobile"</string>
    <string name="login_3">"United States Naval Academy"</string>
    <string name="login_4">"Username"</string>
    <string name="login_5">"Password"</string>
    <string name="loginButton">"Login"</string>

    <string name="ua_1">"NSTAR Mobile"</string>
    <string name="ua_2">"PSAT-1"</string>
    <string name="ua_3">"PSAT-2"</string>
    <string name="ua_4">"User Information &amp; Limits"</string>
    <string name="ua_5">"Log Out"</string>
    <string name="ua_6">"Start"</string>
    <string name="ua_7">"Stop"</string>

    <string name="ps_1">Select Packet Date</string>

    <string name="psat2Header">"Telemetry for PSAT-2"</string>
    <string name="downlink">"Packet Date"</string>
    <string name="seconds">"REC_SECONDS</string>
    <string name="time">"REC_TIME</string>
    <string name="count">REC_COUNT</string>
    <string name="header">HEADER</string>
    <string name="date">"DATE"</string>
    <string name="tlmCount">"TLM COUNT"</string>
    <string name="busv">BUS_VOLT</string>
    <string name="busc">"BUS_CUR</string>
    <string name="tempzp">TEMP_ZP</string>
    <string name="tempzn">TEMP_ZN</string>
    <string name="tempb">BAT_TEMP</string>
    <string name="dstatus">DIGI_STATUS</string>
    <string name="tdate">"25JAN2018 07:54:23"</string>

    <string name="copyright">"MIDN Edward Decker and MIDN Daniel Lloyd, USNA 2018"</string>

</resources>
