<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nstar.usna.edu.nstar.Login"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/login_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/login_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/loginBelow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/login_3"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/loginBelow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/login_4"
        android:textColor="@color/white"
        android:gravity="bottom"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/textUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@null"
        app:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/loginBelow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/login_5"
        android:textColor="@color/white"
        android:gravity="bottom" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/textPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@null"
        app:backgroundTint="@color/white" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:background="@drawable/button_default"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/loginButton"
        android:textSize="20sp" />


</LinearLayout>
