<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nstar.usna.edu.nstar.UserArea"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/ua_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/welcomeName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:fontFamily="@font/prox_nova_thin"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="top" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:src="@drawable/nstar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStartCollection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:fontFamily="@font/prox_nova_thin"
            android:text="@string/ua_6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/button_default"
            android:layout_marginTop="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_marginRight="0.5dp"
            android:onClick="setAlarm"
            />


        <Button
            android:id="@+id/buttonStopCollection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:fontFamily="@font/prox_nova_thin"
            android:text="@string/ua_7"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/button_default"
            android:layout_marginTop="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:onClick="cancelAlarm"/>

    </LinearLayout>



    <Button
    android:id="@+id/buttonPSAT1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.10"
    android:fontFamily="@font/prox_nova_thin"
    android:text="@string/ua_2"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:background="@drawable/button_default"
    android:layout_marginTop="0.5dp"
    android:layout_marginBottom="0.5dp" />

    <Button
        android:id="@+id/buttonPSAT2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/ua_3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_default"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="0.5dp"/>

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/ua_4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_options"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="0.5dp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/ua_5"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_logout"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="0.5dp" />

</LinearLayout>
