<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="nstar.usna.edu.nstar.PSAT2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/psat2_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/psat2Header"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/psat2_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:fontFamily="@font/prox_nova_thin"
        android:text="@string/downlink"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center|top"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/labels2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rec_sec_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/seconds"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/rec_time_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/time"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rec_sec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"/>

        <Button
            android:id="@+id/rec_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rec_count_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/count"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/header_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/header"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rec_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp" />

        <Button
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/date"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tlm_count_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tlmCount"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp" />

        <Button
            android:id="@+id/tlm_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bus_volt_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/busv"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bus_cur_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/busc"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bus_volt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp" />

        <Button
            android:id="@+id/bus_cur"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temp_zp_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tempzp"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/temp_zn_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tempzn"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/temp_zp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp" />

        <Button
            android:id="@+id/temp_zn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bat_temp_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tempb"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/digi_status_lab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/dstatus"
            android:textColor="@color/white"
            android:fontFamily="@font/prox_nova_thin"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bat_temp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginEnd="1.0dp" />

        <Button
            android:id="@+id/digi_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="@font/prox_nova_thin"
            android:background="@drawable/button_default"
            android:layout_marginTop="1.0dp"
            android:layout_marginBottom="1.0dp"
            android:layout_marginStart="1.0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:background="@drawable/button_options"
        android:layout_marginTop="1.0dp"
        android:text="Home"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/prox_nova_thin"/>













</LinearLayout>
